concat is not available before 9.1 and update travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,7 @@ addons:
   postgresql: "9.4"
 
 before_install:
-  - sudo apt-get update -q
-  - sudo apt-get install -y libdbd-pg-perl
+  - cpanm DBD::Pg
 
 install:
   - true
